Fixed slider margin-left was overlaping level span

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -22,7 +22,7 @@
 
 .slider {
   width: 350px;
-  margin: 0 10px;
+  margin: 0 20px;
   display: inline-block;
 }
 
